--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "swiftmon restarts your swift application in case of any file change",
   "main": "index.js",
   "bin": {
-    "swiftmon": "node $npm_package_main"
+    "swiftmon": "node index.js"
   },
   "preferGlobal": "true",
   "scripts": {
