--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "swiftmon",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "swiftmon restarts your swift application in case of any file change",
   "main": "index.js",
   "bin": {
-    "swiftmon": "node index.js"
+    "swiftmon": "./bin/swiftmon"
   },
   "preferGlobal": "true",
   "scripts": {
-    "build": "NODE_ENV=production babel index.js -d dist",
+    "start": "nodemon $npm_package_main --exec babel-node",
+    "clean": "rimraf lib",
+    "build": "NODE_ENV=production babel index.js -d lib && babel src -d lib/src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -47,6 +49,7 @@
     "nodemon": "1.11.0"
   },
   "dependencies": {
-    "babel-plugin-transform-runtime": "6.23.0"
+    "babel-plugin-transform-runtime": "6.23.0",
+    "colors": "1.1.2"
   }
 }
