--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiftmon",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "swiftmon restarts your swift application in case of any file change",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "nodemon $npm_package_main --exec babel-node",
     "clean": "rimraf lib",
-    "build": "NODE_ENV=production babel index.js -d lib && babel src -d lib/src",
+    "build": "NODE_ENV=production babel src -d lib",
+    "release": "npm run clean && npm run build -s && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
