--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiftmon",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "swiftmon restarts your swift application in case of any file change",
   "main": "index.js",
   "bin": {
@@ -11,7 +11,7 @@
     "start": "nodemon $npm_package_main --exec babel-node",
     "clean": "rimraf lib",
     "build": "NODE_ENV=production babel src -d lib",
-    "release": "npm run clean && npm run build -s && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
+    "release": "npm run clean && npm run build -s && git commit -am $npm_package_version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
